# koma-bell

./: .gitignore  AGENTS.md  README.md  config.example.yml  pyproject.toml  state.example.json  subscriptions.example.yml  subscriptions.yml
.github/workflows/: check.yml  ci.yml
src/koma_bell/: __init__.py  __main__.py  checker.py  cli.py  config.py  exceptions.py  models.py  notifier.py  paths.py  secrets.py  state.py
src/koma_bell/mail/: __init__.py  smtp.py
src/koma_bell/sources/: base.py
src/koma_bell/sources/copymanga/: __init__.py  client.py  errors.py  parser.py  url.py
src/koma_bell/storage/: json_store.py
src/koma_bell/utils/: http.py  log.py
tests/fixtures/: config.valid.yml  copymanga_detail.html  state.old.json  subscriptions.valid.yml
tests/integration/: test_cli_check_dry_run.py  test_copymanga_client_mocked.py
tests/live/: test_live_copymanga_optional.py
tests/unit/: test_checker.py  test_config.py  test_copymanga_parser.py  test_copymanga_url.py  test_mailer.py  test_notifier.py  test_state.py
