[project]
name = "koma-bell"
version = "0.1.0"
description = "A lightweight CLI manga update notifier."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "httpx[socks]>=0.28.1",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "selectolax>=0.3.27",
    "typer>=0.15.1",
]

[project.scripts]
koma-bell = "koma_bell.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-httpx>=0.35.0",
    "ruff>=0.8.6",
    "pyright>=1.1.391",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
